[project]
name = "wenke-studio-infrastructure"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.137.0",
    "pulumi-aws>=6.56.1",
]

[tool.uv]
dev-dependencies = [
    "commitizen>=3.30.0",
    "ruff>=0.7.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
